# c7n_make

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  lint_config.toml  pyproject.toml  pyproject.toml.org
aws_extras/: c7n_monkey.py  entry.py  provider.py  resource_map.py
aws_extras/resources/: __init__.py  appsync.py  sqs.py
c7n_checker/: manage.py
c7n_checker/c7n_checker_app/: c7n_monkey.py  forms.py  urls.py  views.py
c7n_checker/c7n_checker_app/templates/: checker.jinja2
c7n_checker/c7n_checker_project/: asgi.py  settings.py  urls.py  wsgi.py
c7n_docs_checker/: check_examples.py  check_examples_dry_run.py  check_examples_in_docstrings.py
c7n_fluent/: builder.py
c7n_make/: lint.py
policies/base_policies/: default.yml
test_appsync/: test_create.py  test_create_in_process.py  test_query.yml  test_teardown.yml
test_normal_appsync/: test_create.py  test_query.yml  test_teardown.yml
test_sqs/: test_create_query_teardown.py  test_create_query_teardown_no_subprocess.py  test_sqs_query2.yml  test_sqs_teardown.yml
