[project]
name = "aws-extras"
version = "0.1.0"
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "c7n>=0.9.41",
    # "c7n_azure",
]

[dependency-groups]
dev = ["yamllint", "pyyaml", "jsonschema", "ruamel.yaml", "genson", "yamldoc", "pytest"]
